# chat_engine

./: .gitignore  CMakeLists.txt  README.md
include/: states.hpp
include/client/: chat_client.hpp  client_common.hpp  client_state_manager.hpp  client_states.hpp  rtc_client.hpp  zed_camera.hpp
include/client/camera/: base_camera.hpp  generic_camera.hpp  laptop_camera.hpp  zed_camera.hpp
include/client/rpc/: robot_rpc_manager.hpp  rtc_client.hpp
include/client/sessions/: base_session.hpp  camera_streamer.hpp
include/client/states/: client_state_manager.hpp  client_states.hpp
include/client/states/impl/: detect_speech_state_impl.hpp  event_impl.hpp  fault_state_impl.hpp  fsm_impl.hpp  greeting_state_impl.hpp  idle_state_impl.hpp  init_state_impl.hpp  stream_camera_state_impl.hpp  stream_response_state_impl.hpp  stream_speech_state_impl.hpp  terminated_state_impl.hpp  wait_stream_camera_state_impl.hpp  wait_stream_response_impl.hpp  wait_stream_speech_state_impl.hpp
include/common/: chat_type.hpp  chat_utils.hpp
include/common/sessions/: base_session.hpp
include/server/: chat_server.hpp  server_rpc_manager.hpp  signaling_server.hpp
include/server/rpc/: server_rpc_manager.hpp
include/server/sessions/: camera_receiver.hpp
include/tinyfsm/: tinyfsm.hpp
src/: chat_engine.cpp  client_main.cpp  server_main.cpp
src/client/: client_state_manager.cpp  client_states.cpp  rtc_client.cpp  zed_camera.cpp
src/client/camera/: base_camera.cpp  generic_camera.cpp  laptop_camera.cpp  zed_camera.cpp
src/client/rpc/: robot_rpc_manager.cpp  rtc_client.cpp
src/client/sessions/: base_session.cpp  camera_streamer.cpp
src/client/states/: client_state_manager.cpp  client_states.cpp
src/common/sessions/: base_session.cpp
src/proto/: chat.proto  robot.proto  server.proto  signaling.proto
src/server/: chat_server.cpp  server_rpc_manager.cpp  signaling_server.cpp
src/server/rpc/: server_rpc_manager.cpp
src/server/sessions/: camera_receiver.cpp
